# nagios-notify

./: .editorconfig  .gitignore  Cargo.toml  README.md  config.yml.example  template.txt
.github/workflows/: release.yml
logrotate.d/: nagios-notify
src/: main.rs
test/: send_test_host_problem.sh  send_test_host_recovery.sh  send_test_service_problem.sh  send_test_service_recovery.sh
