[package]
name = "nagios-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive", "unicode"] }
hostname = "0.4.0"
lettre = { version = "0.11.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
strum = "0.26"
strum_macros = "0.26"
tera = "1.20.0"
time = { version = "0.3.37", features = ["macros", "formatting"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }

[profile.dev]
debug = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
