[package]
name = "nagios-notify"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-sdk-sns = "1.62.0"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive", "unicode"] }
hostname = "0.4.1"
lettre = { version = "0.11.18", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
strum = "0.26"
strum_macros = "0.26"
tera = "1.20.0"
time = { version = "0.3.44", features = ["macros", "formatting"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "local-time"] }

[profile.dev]
debug = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
